--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="pic/2.jpg" class="d-block w-100 rounded" alt="欢迎来到太阳花鸭鸭鸭的世界">
+                <img src="2.jpg" class="d-block w-100 rounded" alt="欢迎来到太阳花鸭鸭鸭的世界">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>欢迎来到太阳花鸭鸭鸭的世界</h2>
                     <p>这里是我的个人作品展示和介绍页面</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="pic/3.jpg" class="d-block w-100 rounded" alt="探索我的创意空间">
+                <img src="3.jpg" class="d-block w-100 rounded" alt="探索我的创意空间">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>探索我的创意空间</h2>
                     <p>发现独特的设计和摄影作品</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="pic/4.jpg" class="d-block w-100 rounded" alt="联系我">
+                <img src="4.jpg" class="d-block w-100 rounded" alt="联系我">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>联系我</h2>
                     <p>让我们一起创造精彩</p>
