--- a/index.html
+++ b/index.html
@@ -50,28 +50,59 @@
         </button>
     </div>
 
-    <!-- 将"关于我"部分移到这里 -->
-    <section id="about" class="full-width-section">
+    <section id="about" class="py-5 bg-light">
         <div class="container">
-            <h2 class="text-center mb-4">关于我</h2>
-            <div class="about-content">
-                <div class="about-skills">
-                    <h3>技能</h3>
-                    <ul>
-                        <li><i class="fas fa-camera fa-fw me-2"></i>摄影</li>
-                        <li><i class="fas fa-paint-brush fa-fw me-2"></i>设计</li>
-                        <li><i class="fas fa-code fa-fw me-2"></i>编程</li>
-                    </ul>
-                </div>
-                <div class="about-center">
-                    <div class="avatar-container">
-                        <img src="https://via.placeholder.com/250" alt="我的头像" class="avatar img-fluid rounded-circle">
+            <h2 class="text-center mb-2">关于我</h2>
+            <p class="text-center text-muted mb-5">About Me</p>
+            <div class="row">
+                <div class="col-md-2 mb-4">
+                    <div class="about-item text-center">
+                        <i class="fas fa-heart fa-3x mb-3 text-primary"></i>
+                        <h3 class="h4 mb-3">兴趣</h3>
+                        <ul class="list-unstyled">
+                            <li>喜欢音乐，喜欢晴天也喜欢雨天喜欢摄影，对可爱的事物没有抵抗力，梦想是走遍全世界！</li>
+                           
+                        </ul>
                     </div>
-                    <p>这里是关于我的介绍。您可以在这里添加您的个人简介、经历等信息。</p>
                 </div>
-                <div class="about-experience">
-                    <h3>经历</h3>
-                    <p>这里可以添加您的工作经历或者重要的人生经历。</p>
+                <div class="col-md-2 mb-4">
+                    <div class="about-item text-center">
+                        <i class="fas fa-code fa-3x mb-3 text-success"></i>
+                        <h3 class="h4 mb-3">技能</h3>
+                        <ul class="list-unstyled">
+                            <li>摄影</li>
+                            <li>设计</li>
+                            <li>编程</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="about-item text-center">
+                        <img src="tx.jpg" alt="我的头像" class="rounded-circle img-fluid mb-3" style="width: 200px; height: 200px; object-fit: cover;">
+                        <p>hi~我是太阳花鸭鸭鸭，在这里你可以看到我的一切！</p>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-4">
+                    <div class="about-item text-center">
+                        <i class="fas fa-briefcase fa-3x mb-3 text-info"></i>
+                        <h3 class="h4 mb-3">经历</h3>
+                        <ul class="list-unstyled">
+                            <li>工作经历1</li>
+                            <li>教育经历</li>
+                            <li>重要成就</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-4">
+                    <div class="about-item text-center">
+                        <i class="fas fa-bullseye fa-3x mb-3 text-danger"></i>
+                        <h3 class="h4 mb-3">目标</h3>
+                        <ul class="list-unstyled">
+                            <li>成为全栈开发者</li>
+                            <li>环游世界</li>
+                            <li>持续学习</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,7 +111,8 @@
     <main class="container mt-4">
         <div class="content-layout">
             <section id="portfolio">
-                <h2 class="text-center">作品集</h2>
+                <h2 class="text-center mb-2">作品集</h2>
+                <p class="text-center text-muted mb-5">My Portfolio</p>
                 <div class="row">
                     <div class="col-md-6 mb-4">
                         <img src="https://via.placeholder.com/600x400" alt="作品1" class="img-fluid rounded">
@@ -104,7 +136,8 @@
             </section>
 
             <section id="gallery">
-                <h2 class="text-center">照片展示</h2>
+                <h2 class="text-center mb-2">照片展示</h2>
+                <p class="text-center text-muted mb-5">Photo Gallery</p>
                 <div class="row">
                     <div class="col-md-6 mb-4">
                         <img src="https://via.placeholder.com/600x400" alt="照片1" class="img-fluid rounded">
@@ -133,14 +166,16 @@
         <div class="container">
             <div class="row align-items-start">
                 <div class="col-md-6 contact-section">
-                    <h2 class="mb-4">联系我</h2>
+                    <h2 class="mb-2">联系我</h2>
+                    <p class="text-muted mb-4">Contact Me</p>
                     <ul class="list-unstyled contact-list">
-                        <li class="mb-3"><i class="fas fa-phone fa-fw me-2"></i>电话：123-456-7890</li>
-                        <li><i class="fas fa-map-marker-alt fa-fw me-2"></i>地址：某某省某某市某某区某某街道123号</li>
+                        <li class="mb-3"><i class="fas fa-phone fa-fw me-2"></i>电话：151-3309-9937</li>
+                        <li><i class="fas fa-map-marker-alt fa-fw me-2"></i>地址：天津市西青区精武镇格调松间北里</li>
                     </ul>
                 </div>
                 <div class="col-md-6 follow-section">
-                    <h2 class="mb-4">关注我</h2>
+                    <h2 class="mb-2">关注我</h2>
+                    <p class="text-muted mb-4">Follow Me</p>
                     <div class="row">
                         <div class="col-6">
                             <ul class="list-unstyled social-links">
